my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/960512-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/960512-1.c:12:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   12 | main ()
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/960512-1.c:16:9: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
   16 |   if (c = f ())
      |       ~~^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/960512-1.c:16:9: note: place parentheses around the assignment to silence this warning
   16 |   if (c = f ())
      |         ^     
      |       (       )
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/960512-1.c:16:9: note: use '==' to turn this assignment into an equality comparison
   16 |   if (c = f ())
      |         ^
      |         ==
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/960512-1.c:17:5: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   17 |     abort ();
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/960512-1.c:17:5: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/960512-1.c:18:3: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   18 |   exit (0);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/960512-1.c:18:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
1 warning and 3 errors generated.
